@@ -6,6 +6,13 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+RH-2011-03-14-0: Bugfix:      rerun of a tightly integrated parallel job crashes
+                              qmaster after restart
+                              (merged from JG-2009-12-28-0)
+                 Bugster:     6912529
+                 Issue:       3216
+                 Review:      HP
+
 RH-2011-03-08-0: Cleanup:     LINUX Macro
                  Review:      RC
 
